--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <div class="catalog">
                                 <div class="catalog__col">
                                     <div class="catalog__img">
-                                        <picture><source srcset="/img/collections_item.webp" type="image/webp"><img src="/img/collections_item.png" alt="Часы"></picture>
+                                        <picture><source srcset="./img/collections_item.webp" type="image/webp"><img src="./img/collections_item.png" alt="Часы"></picture>
                                     </div>
                                     <p class="catalog__itemname">
                                         Louis XVI ATHOS
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="catalog__col">
                                     <div class="catalog__img">
-                                        <picture><source srcset="/img/collections_item.webp" type="image/webp"><img src="/img/collections_item.png" alt="Часы"></picture>
+                                        <picture><source srcset="./img/collections_item.webp" type="image/webp"><img src="./img/collections_item.png" alt="Часы"></picture>
                                     </div>
                                     <p class="catalog__itemname">
                                         Louis XVI ATHOS
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="catalog__col">
                                     <div class="catalog__img">
-                                        <picture><source srcset="/img/collections_item.webp" type="image/webp"><img src="/img/collections_item.png" alt="Часы"></picture>
+                                        <picture><source srcset="./img/collections_item.webp" type="image/webp"><img src="./img/collections_item.png" alt="Часы"></picture>
                                     </div>
                                     <p class="catalog__itemname">
                                         Louis XVI ATHOS
